Fix toggle buttons not showing on mobile

--- a/src/Lekplats/styles.scss
+++ b/src/Lekplats/styles.scss
@@ -276,6 +276,7 @@
 
 .toggle {
   position: absolute;
+  z-index: 1000;
   bottom: 40px;
   right: 40px;
   background-color: #eee;
